# django-nginx-postgres-wsgi-static

./: README.md  compose.yaml
beeline/: manage.py  pyproject.toml  requirements.txt
beeline/authenticator/: urls.py  views.py
beeline/authenticator/migrations/: 0001_initial.py  0002_delete_algorithmresult.py
beeline/beeline/: asgi.py  urls.py  wsgi.py
beeline/beeline/settings/: base.py  production.py
beeline/runner/: apps.py  models.py  serializers.py  urls.py  views.py
beeline/runner/migrations/: 0001_initial.py
beeline/uploader/: models.py  serializers.py  urls.py  views.py
beeline/uploader/migrations/: 0001_initial.py  0002_alter_dataset_owner.py  0003_remove_dataset_file_dataset_expression_data_file_and_more.py
media-files/: media-test.txt
mysite/: Dockerfile  gunicorn.config.py  pyproject.toml  requirements.txt
mysite/authenticator/: form_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/authenticator/migrations/: 0002_userfile.py
mysite/authenticator/templates/authenticator/: base.html  form.html
mysite/mysite/settings/: base.py  production.py
nginx/: default.conf  start.sh
secrets/beeline/: secret_key.txt
secrets/db/: password.txt
